--- a/MVVMFirma/Views/WszyscyLekarzeView.xaml
+++ b/MVVMFirma/Views/WszyscyLekarzeView.xaml
@@ -7,6 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
-        <Label>Tutaj beda wszyscy lekarze</Label>
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding List}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Binding="{Binding LekarzId}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Imie i nazwisko" Binding="{Binding ImieNazwisko}"></DataGridTextColumn>
+                <DataGridTextColumn Header="specjalizacja" Binding="{Binding Specjalizacja}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Numer telefonu" Binding="{Binding NumerTelefonu}"></DataGridTextColumn>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </local:WszystkieViewBase>
