--- a/MVVMFirma/Views/WszyscyPacjenciView.xaml
+++ b/MVVMFirma/Views/WszyscyPacjenciView.xaml
@@ -7,6 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
-        <Label>Tutaj beda wszyscy pacjenci</Label>
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding List}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Binding="{Binding PacjentId}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Imie i nazwisko" Binding="{Binding ImieNazwisko}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Data urodzenia" Binding="{Binding DataUrodzenia}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Numer telefonu" Binding="{Binding NumerTelefonu}"></DataGridTextColumn>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </local:WszystkieViewBase>
