--- a/MVVMFirma/Themes/Generic.xaml
+++ b/MVVMFirma/Themes/Generic.xaml
@@ -14,7 +14,7 @@
                             <RowDefinition Height="60"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <Label Grid.Row="0">Tu beda elementy wspolneeeeee</Label>
+                        <Label Grid.Row="0">Tu beda elementy wspolne</Label>
                         <ToolBar Grid.Row="0" Margin="0,2,0,2">
                             <ToggleButton Content="Dodaj" Margin="0,2,0,2"/>
                             <ToggleButton Content="Edytuj" Margin="0,2,0,2"/>
