--- a/MVVMFirma/Views/WszyscyPacjenciView.xaml
+++ b/MVVMFirma/Views/WszyscyPacjenciView.xaml
@@ -13,9 +13,9 @@
                 <DataGridTextColumn Header="Imie i nazwisko" Binding="{Binding ImieNazwisko}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Data urodzenia" Binding="{Binding DataUrodzenia}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Numer telefonu" Binding="{Binding NumerTelefonu}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Numer telefonu" Binding="{Binding Pesel}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Numer telefonu" Binding="{Binding Miasto}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Numer telefonu" Binding="{Binding Email}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Pesel" Binding="{Binding Pesel}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Miasto" Binding="{Binding Miasto}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Email" Binding="{Binding Email}"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
