--- a/MVVMFirma/Views/WszystkieDokumentacjeView.xaml
+++ b/MVVMFirma/Views/WszystkieDokumentacjeView.xaml
@@ -7,6 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
-        <Label>Tutaj bedzie cala dokumentacja medyczna</Label>
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding List}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="DokumentacjaId" Binding="{Binding DokumentacjaId}"/>
+                <DataGridTextColumn Header="Typ dokumentu" Binding="{Binding TypDokumentu}"/>
+                <DataGridTextColumn Header="Data wystawienia" Binding="{Binding DataDokumentu}"/>
+                <DataGridTextColumn Header="Godnosc pacjenta" Binding="{Binding PacjentImieNazwisko}"/>
+                <DataGridTextColumn Header="Data urodzenia pacjenta" Binding="{Binding PacjentDataUrodzenia}"/>
+                <DataGridTextColumn Header="Miasto urodzenia pacjenta" Binding="{Binding PacjentMiasto}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </local:WszystkieViewBase>
