--- a/MVVMFirma/Views/WszystkieHistorieChorobView.xaml
+++ b/MVVMFirma/Views/WszystkieHistorieChorobView.xaml
@@ -7,6 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
-        <Label>Tutaj bedzie cala historia chorob</Label>
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding List}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="HistoriaChorobyId" Binding="{Binding HistoriaChorobyId}"/>
+                <DataGridTextColumn Header="Opis choroby" Binding="{Binding OpisChoroby}"/>
+                <DataGridTextColumn Header="Data rozpoznania" Binding="{Binding DataRopoznania}"/>
+                <DataGridTextColumn Header="Godnosc pacjenta" Binding="{Binding PacjentImieNazwisko}"/>
+                <DataGridTextColumn Header="Data urodzenia pacjenta" Binding="{Binding PacjentDataUrodzenia}"/>
+                <DataGridTextColumn Header="Miasto urodzenia pacjenta" Binding="{Binding PacjentMiasto}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </local:WszystkieViewBase>
