--- a/MVVMFirma/Views/WszystkieReceptyLekiView.xaml
+++ b/MVVMFirma/Views/WszystkieReceptyLekiView.xaml
@@ -7,6 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
-        <Label>Tutaj beda wszystkie recepty leki</Label>
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding List}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ReceptaLekiId" Binding="{Binding ReceptaLekiId}"/>
+                <DataGridTextColumn Header="Dawkowanie" Binding="{Binding Dawkowanie}"/>
+                <DataGridTextColumn Header="Nazwa leku" Binding="{Binding LekNazwa}"/>
+                <DataGridTextColumn Header="Typ leku" Binding="{Binding LekTyp}"/>
+                <DataGridTextColumn Header="ReceptaId" Binding="{Binding ReceptaId}"/>
+                <DataGridTextColumn Header="Godnosc pacjenta" Binding="{Binding PacjentImieNazwisko}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </local:WszystkieViewBase>
