--- a/MVVMFirma/Views/WszystkiePlatnosciView.xaml
+++ b/MVVMFirma/Views/WszystkiePlatnosciView.xaml
@@ -7,7 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
-        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding List}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10">
+            <Button Content="Oblicz sume" Click="ObliczSume_Click" Margin="0,0,10,0" />
+            <Label x:Name="SumaLabel" Content="Suma: 0,00 zł" VerticalAlignment="Center" />
+        </StackPanel>
+        <DataGrid Grid.Row="1" AutoGenerateColumns="False" ItemsSource="{Binding List}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="PlatnoscId" Binding="{Binding PlatnoscId}"/>
                 <DataGridTextColumn Header="Kwota" Binding="{Binding Kwota}"/>
