--- a/MVVMFirma/Views/NowyPersonelOddzialView.xaml
+++ b/MVVMFirma/Views/NowyPersonelOddzialView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVMFirma.Views.NowyPersonelOddzialView"
+﻿<local:JedenViewBase x:Class="MVVMFirma.Views.NowyPersonelOddzialView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,6 +7,33 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
-        <Label>Dodaj personel oddzial</Label>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="200" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
+            <RowDefinition Height="40" />
+            <RowDefinition Height="40" />
+        </Grid.RowDefinitions>
+
+        <Label Grid.Column="0" Grid.Row="0" Margin="0,8,0,8" Content="Data dolaczenia" />
+        <DatePicker Grid.Column="1" Grid.Row="0" Margin="0,8,0,8" SelectedDate="{Binding Path=DataDolaczenia, UpdateSourceTrigger=PropertyChanged}"/>
+
+        <Label Grid.Column="0" Grid.Row="1" Margin="0,8,0,8" Content="Personel" />
+        <ComboBox Grid.Column="1" Grid.Row="1" Margin="0,8,0,8" 
+                  ItemsSource="{Binding PersonelItems}"
+                  DisplayMemberPath="Value"
+                  SelectedValuePath="Key"
+                  SelectedValue="{Binding Path=PersonelId,Mode=TwoWay}"
+                  />
+
+        <Label Grid.Column="0" Grid.Row="2" Margin="0,8,0,8" Content="Oddzialy" />
+        <ComboBox Grid.Column="1" Grid.Row="2" Margin="0,8,0,8" 
+                  ItemsSource="{Binding OddzialItems}"
+                  DisplayMemberPath="Value"
+                  SelectedValuePath="Key"
+                  SelectedValue="{Binding Path=OddzialId,Mode=TwoWay}"
+                  />
     </Grid>
-</UserControl>
+</local:JedenViewBase>
