--- a/MVVMFirma/Views/NoweBadanieView.xaml
+++ b/MVVMFirma/Views/NoweBadanieView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVMFirma.Views.NoweBadanieView"
+﻿<local:JedenViewBase x:Class="MVVMFirma.Views.NoweBadanieView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,6 +7,37 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
-        <Label>Tutaj bedzie dodawanie nowego badania</Label>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="200" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
+            <RowDefinition Height="40" />
+            <RowDefinition Height="40" />
+            <RowDefinition Height="40" />
+        </Grid.RowDefinitions>
+
+        <Label Grid.Column="0" Grid.Row="0" Margin="0,8,0,8" Content="Data badania" />
+        <DatePicker Grid.Column="1" Grid.Row="0" Margin="0,8,0,8" SelectedDate="{Binding Path=DataBadania, UpdateSourceTrigger=PropertyChanged}"/>
+
+        <Label Grid.Column="0" Grid.Row="1" Margin="0,8,0,8" Content="Typ badania" />
+        <TextBox Grid.Column="1" Grid.Row="1" Margin="0,8,0,8" Text="{Binding Path=TypBadania, UpdateSourceTrigger=PropertyChanged}"/>
+
+        <Label Grid.Column="0" Grid.Row="2" Margin="0,8,0,8" Content="Lekarze" />
+        <ComboBox Grid.Column="1" Grid.Row="2" Margin="0,8,0,8" 
+                  ItemsSource="{Binding LekarzItems}"
+                  DisplayMemberPath="Value"
+                  SelectedValuePath="Key"
+                  SelectedValue="{Binding Path=LekarzId,Mode=TwoWay}"
+                  />
+
+        <Label Grid.Column="0" Grid.Row="3" Margin="0,8,0,8" Content="Pacjenci" />
+        <ComboBox Grid.Column="1" Grid.Row="3" Margin="0,8,0,8" 
+                  ItemsSource="{Binding PacjentItems}"
+                  DisplayMemberPath="Value"
+                  SelectedValuePath="Key"
+                  SelectedValue="{Binding Path=PacjentId,Mode=TwoWay}"
+                  />
     </Grid>
-</UserControl>
+</local:JedenViewBase>
