--- a/MVVMFirma/Views/NoweSkierowanieView.xaml
+++ b/MVVMFirma/Views/NoweSkierowanieView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVMFirma.Views.NoweSkierowanieView"
+﻿<local:JedenViewBase x:Class="MVVMFirma.Views.NoweSkierowanieView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,6 +7,28 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
-        <Label>Tutaj bedzie dodawanie nowego skierowania</Label>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="200" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
+            <RowDefinition Height="40" />
+            <RowDefinition Height="40" />
+        </Grid.RowDefinitions>
+
+        <Label Grid.Column="0" Grid.Row="0" Margin="0,8,0,8" Content="Data wydania" />
+        <DatePicker Grid.Column="1" Grid.Row="0" Margin="0,8,0,8" SelectedDate="{Binding Path=DataWydania, UpdateSourceTrigger=PropertyChanged}"/>
+
+        <Label Grid.Column="0" Grid.Row="1" Margin="0,8,0,8" Content="Numer skierowania" />
+        <TextBox Grid.Column="1" Grid.Row="1" Margin="0,8,0,8" Text="{Binding Path=NumerSkierowania, UpdateSourceTrigger=PropertyChanged}"/>
+
+        <Label Grid.Column="0" Grid.Row="2" Margin="0,8,0,8" Content="Badania" />
+        <ComboBox Grid.Column="1" Grid.Row="2" Margin="0,8,0,8" 
+                  ItemsSource="{Binding BadanieItems}"
+                  DisplayMemberPath="Value"
+                  SelectedValuePath="Key"
+                  SelectedValue="{Binding Path=BadanieId,Mode=TwoWay}"
+                  />
     </Grid>
-</UserControl>
+</local:JedenViewBase>
