--- a/MVVMFirma/Views/NowaReceptaLekView.xaml
+++ b/MVVMFirma/Views/NowaReceptaLekView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVMFirma.Views.NowaReceptaLekView"
+﻿<local:JedenViewBase x:Class="MVVMFirma.Views.NowaReceptaLekView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,6 +7,33 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
-        <Label>Dodaj nowa recepta lek</Label>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="200" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
+            <RowDefinition Height="40" />
+            <RowDefinition Height="40" />
+        </Grid.RowDefinitions>
+
+        <Label Grid.Column="0" Grid.Row="0" Margin="0,8,0,8" Content="Dawkowanie" />
+        <TextBox Grid.Column="1" Grid.Row="0" Margin="0,8,0,8" Text="{Binding Path=Dawkowanie, UpdateSourceTrigger=PropertyChanged}"/>
+
+        <Label Grid.Column="0" Grid.Row="1" Margin="0,8,0,8" Content="Leki" />
+        <ComboBox Grid.Column="1" Grid.Row="1" Margin="0,8,0,8" 
+                  ItemsSource="{Binding LekItems}"
+                  DisplayMemberPath="Value"
+                  SelectedValuePath="Key"
+                  SelectedValue="{Binding Path=LekId,Mode=TwoWay}"
+                  />
+
+        <Label Grid.Column="0" Grid.Row="2" Margin="0,8,0,8" Content="Pacjenci/Recepta" />
+        <ComboBox Grid.Column="1" Grid.Row="2" Margin="0,8,0,8" 
+                  ItemsSource="{Binding ReceptaItems}"
+                  DisplayMemberPath="Value"
+                  SelectedValuePath="Key"
+                  SelectedValue="{Binding Path=ReceptaId,Mode=TwoWay}"
+                  />
     </Grid>
-</UserControl>
+</local:JedenViewBase>
