--- a/MVVMFirma/Views/NowaFakturaView.xaml
+++ b/MVVMFirma/Views/NowaFakturaView.xaml
@@ -17,20 +17,19 @@
             <RowDefinition Height="40" />
             <RowDefinition Height="40" />
             <RowDefinition Height="40" />
-            <RowDefinition Height="40" />
         </Grid.RowDefinitions>
 
-        <Label Grid.Column="0" Grid.Row="1" Margin="0,8,0,8" Content="Nazwa" />
-        <TextBox Grid.Column="1" Grid.Row="1" Margin="0,8,0,8" Text="{Binding Path=Nazwa, UpdateSourceTrigger=PropertyChanged}"/>
+        <Label Grid.Column="0" Grid.Row="0" Margin="0,8,0,8" Content="Nazwa" />
+        <TextBox Grid.Column="1" Grid.Row="0" Margin="0,8,0,8" Text="{Binding Path=Nazwa, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <Label Grid.Column="0" Grid.Row="2" Margin="0,8,0,8" Content="Opis" />
-        <TextBox Grid.Column="1" Grid.Row="2" Margin="0,8,0,8" Text="{Binding Path=Opis, UpdateSourceTrigger=PropertyChanged}"/>
+        <Label Grid.Column="0" Grid.Row="1" Margin="0,8,0,8" Content="Opis" />
+        <TextBox Grid.Column="1" Grid.Row="1" Margin="0,8,0,8" Text="{Binding Path=Opis, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <Label Grid.Column="0" Grid.Row="3" Margin="0,8,0,8" Content="Data wystawienia" />
-        <TextBox Grid.Column="1" Grid.Row="3" Margin="0,8,0,8" Text="{Binding Path=DataWystawienia, UpdateSourceTrigger=PropertyChanged}" />
+        <Label Grid.Column="0" Grid.Row="2" Margin="0,8,0,8" Content="Data wystawienia" />
+        <DatePicker Grid.Column="1" Grid.Row="2" Margin="0,8,0,8" SelectedDate="{Binding Path=DataWystawienia, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <Label Grid.Column="0" Grid.Row="4" Margin="0,8,0,8" Content="Towar" />
-        <ComboBox Grid.Column="1" Grid.Row="4" Margin="0,8,0,8" 
+        <Label Grid.Column="0" Grid.Row="3" Margin="0,8,0,8" Content="Towar" />
+        <ComboBox Grid.Column="1" Grid.Row="3" Margin="0,8,0,8" 
                   ItemsSource="{Binding TowaryItems}"
                   DisplayMemberPath="Value"
                   SelectedValuePath="Key"
