--- a/MVVMFirma/Views/NowyPacjentView.xaml
+++ b/MVVMFirma/Views/NowyPacjentView.xaml
@@ -24,7 +24,7 @@
         <TextBox Grid.Column="1" Grid.Row="0" Margin="0,8,0,8" Text="{Binding Path=ImieNazwisko, UpdateSourceTrigger=PropertyChanged}"/>
 
         <Label Grid.Column="0" Grid.Row="1" Margin="0,8,0,8" Content="Data urodzenia" />
-        <TextBox Grid.Column="1" Grid.Row="1" Margin="0,8,0,8" Text="{Binding Path=DataUrodzenia, UpdateSourceTrigger=PropertyChanged}"/>
+        <DatePicker Grid.Column="1" Grid.Row="1" Margin="0,8,0,8" SelectedDate="{Binding Path=DataUrodzenia, UpdateSourceTrigger=PropertyChanged}"/>
 
         <Label Grid.Column="0" Grid.Row="2" Margin="0,8,0,8" Content="Numer telefonu" />
         <TextBox Grid.Column="1" Grid.Row="2" Margin="0,10,0,6" Text="{Binding Path=NumerTelefonu, UpdateSourceTrigger=PropertyChanged}" />
