--- a/MVVMFirma/Views/MainWindowResources.xaml
+++ b/MVVMFirma/Views/MainWindowResources.xaml
@@ -3,6 +3,9 @@
                     xmlns:vm="clr-namespace:MVVMFirma.ViewModels"
                     xmlns:vw="clr-namespace:MVVMFirma.Views"
                     >
+    <DataTemplate DataType="{x:Type vm:RaportPlatnosciViewModel}">
+        <vw:RaportPlatnosciView />
+    </DataTemplate>
     <DataTemplate DataType="{x:Type vm:WszystkieTowaryViewModel}">
         <vw:WszystkieTowaryView/>
     </DataTemplate>
