--- a/MVVMFirma/Views/RaportPlatnosciView.xaml
+++ b/MVVMFirma/Views/RaportPlatnosciView.xaml
@@ -6,13 +6,14 @@
              xmlns:local="clr-namespace:MVVMFirma.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White" Width="500" HorizontalAlignment="Left">
+    <Grid Background="White" Width="800" HorizontalAlignment="Left">
         <Grid.RowDefinitions>
             <RowDefinition Height="33" />
             <RowDefinition Height="33" />
             <RowDefinition Height="33" />
             <RowDefinition Height="40" />
             <RowDefinition Height="33" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0" Content="Platnosci w wybranym okresie dla wybranego pacjenta" Margin="3" HorizontalContentAlignment="Center" />
@@ -57,5 +58,16 @@
             <Label Grid.Column="0" Content="Platnosci wynosza: " Margin="3" />
             <Label Grid.Column="1" Content="{Binding PlatnosciSuma}" Margin="3" />
         </Grid>
+
+        <DataGrid Grid.Row="5" AutoGenerateColumns="False" ItemsSource="{Binding PlatnosciLista}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="PlatnoscId" Binding="{Binding PlatnoscId}"/>
+                <DataGridTextColumn Header="Kwota" Binding="{Binding Kwota}"/>
+                <DataGridTextColumn Header="Data platnosci" Binding="{Binding DataPlatnosci}"/>
+                <DataGridTextColumn Header="Godnosc pacjenta" Binding="{Binding PacjentImieNazwisko}"/>
+                <DataGridTextColumn Header="Data urodzenia pacjenta" Binding="{Binding PacjentDataUrodzenia}"/>
+                <DataGridTextColumn Header="Miasto zamieszkania pacjenta" Binding="{Binding PacjentMiasto}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </UserControl>
