--- a/MVVMFirma/Views/NowaFakturaView.xaml
+++ b/MVVMFirma/Views/NowaFakturaView.xaml
@@ -10,8 +10,10 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="150" />
             <ColumnDefinition Width="200" />
+            <ColumnDefinition Width="100" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
             <RowDefinition Height="40" />
             <RowDefinition Height="40" />
             <RowDefinition Height="40" />
@@ -28,12 +30,11 @@
         <Label Grid.Column="0" Grid.Row="2" Margin="0,8,0,8" Content="Data wystawienia" />
         <DatePicker Grid.Column="1" Grid.Row="2" Margin="0,8,0,8" SelectedDate="{Binding Path=DataWystawienia, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <Label Grid.Column="0" Grid.Row="3" Margin="0,8,0,8" Content="Towar" />
-        <ComboBox Grid.Column="1" Grid.Row="3" Margin="0,8,0,8" 
-                  ItemsSource="{Binding TowaryItems}"
-                  DisplayMemberPath="Value"
-                  SelectedValuePath="Key"
-                  SelectedValue="{Binding Path=TowarId,Mode=TwoWay}"
-                  />
+        <Label Grid.Column="0" Grid.Row="3" Margin="0,8,0,8" Content="Towar Nazwa" />
+        <TextBox Grid.Column="1" Grid.Row="3" IsEnabled="False"  Margin="0,8,0,8" Text="{Binding Path=TowarNazwa, UpdateSourceTrigger=PropertyChanged}"/>
+        <Button Content="..." Grid.Column="3" Grid.Row="3" Margin="8,8,0,8" Command="{Binding ShowTowary}" />
+
+        <Label Grid.Column="0" Grid.Row="4" Margin="0,8,0,8" Content="Towar Kod" />
+        <TextBox Grid.Column="1" Grid.Row="4" IsEnabled="False" Margin="0,8,0,8" Text="{Binding Path=TowarKod, UpdateSourceTrigger=PropertyChanged}"/>
     </Grid>
 </local:JedenViewBase>
